--- a/app/views/layouts/atgc.html.erb
+++ b/app/views/layouts/atgc.html.erb
@@ -67,12 +67,12 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-laptop"></i>
-            <span>RNAseq</span>
+            <span>Metagenomics</span>
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/rnaseq/index.html"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/rnaseq/index.html"><i class="fa fa-circle-o"></i> Programs</a></li>
+            <li><a href="/Members/Materials/metagenomics/index.html"><i class="fa fa-circle-o"></i> Tutorial</a></li>
+            <li><a href="/Members/Materials/metagenomics/index.html"><i class="fa fa-circle-o"></i> Programs</a></li>
           </ul>
         </li>
 
