--- a/app/views/layouts/hs.html.erb
+++ b/app/views/layouts/hs.html.erb
@@ -14,15 +14,13 @@
 <%= csrf_meta_tags %>
 </head>
 
-
-
 <body class="hold-transition skin-red sidebar-mini">
 <div class="wrapper">
 
       <header class="main-header">
     <a href="/pages/home/" class="logo">
       <span class="logo-mini"><b>A</b>LT</span>
-      <span class="logo-lg">C4M for HS</span>
+      <span class="logo-lg">Coding for Medicine</span>
     </a>
     <nav class="navbar navbar-static-top">
       <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
@@ -66,11 +64,13 @@
         <li class="treeview">
           <a href="#">
             <i class="fa fa-laptop"></i>
-            <span>Unix</span>
+            <span>Using linux and github</span>
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/linux/index.html"><i class="fa fa-circle-o"></i> Unix/linux tutorial</a></li>
+            <li><a href="/Members/Materials/linux/index.html"><i class="fa fa-circle-o"></i>Unix/linux tutorial</a></li>
+            <li><a href="/Members/Materials/github/index.html"><i class="fa fa-circle-o"></i>Github for sharing code</a></li>
+            <li><a href="/Members/Materials/regexp/index.html"><i class="fa fa-circle-o"></i>Regular expression</a></li>
           </ul>
         </li>
 
@@ -81,22 +81,57 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/scripting/index.html"><i class="fa fa-circle-o"></i> Python tutorial</a></li>
+            <li><a href="/Members/Materials/hspython1/index.html"><i class="fa fa-circle-o"></i>Python - get started</a></li>
+            <li><a href="/Members/Materials/hspython2/index.html"><i class="fa fa-circle-o"></i>Solve easy problems</a></li>
+            <li><a href="/Members/Materials/hspython3/index.html"><i class="fa fa-circle-o"></i>Python - more concepts</a></li>
+            <li><a href="/Members/Materials/hspython4/index.html"><i class="fa fa-circle-o"></i>Solve bioinformatics problems</a></li>
           </ul>
         </li>
+
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>Python puzzles</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/Members/Materials/hspython5/index.html"><i class="fa fa-circle-o"></i>Solve jigsaw puzzle</a></li>
+          </ul>
+        </li>
+
 
 
 
         <li class="treeview">
           <a href="#">
             <i class="fa fa-laptop"></i>
-            <span>Programs</span>
+            <span>Bioinformatics programs</span>
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pandora/index.html"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
+            <li><a href="/Members/Materials/hs-blast/index.html"><i class="fa fa-circle-o"></i>BLAST</a></li>
+            <li><a href="/Members/Materials/hs-muscle/index.html"><i class="fa fa-circle-o"></i>MUSCLE</a></li>
           </ul>
         </li>
+
+        <li class="treeview">
+          <a href="#">
+            <i class="fa fa-laptop"></i>
+            <span>Databases</span>
+            <i class="fa fa-angle-left pull-right"></i>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/Members/Materials/hs-ncbi-blast/index.html"><i class="fa fa-circle-o"></i>NCBI BLAST</a></li>
+            <li><a href="/Members/Materials/hs-uniprot/index.html"><i class="fa fa-circle-o"></i>Uniprot</a></li>
+            <li><a href="/Members/Materials/hs-yeast/index.html"><i class="fa fa-circle-o"></i>Yeast database</a></li>
+            <li><a href="/Members/Materials/hs-ucsc/index.html"><i class="fa fa-circle-o"></i>UC Santa Cruz</a></li>
+            <li><a href="/Members/Materials/hs-ncbi/index.html"><i class="fa fa-circle-o"></i>NCBI</a></li>
+          </ul>
+        </li>
+
+    </section>
+
 
     </section>
     <!-- /.sidebar -->
@@ -114,7 +149,7 @@
 
       <h1>
         Coding for Medicine
-        <small>Enabling life scientists to code confidently</small>
+        <small>Enabling young life scientists to code confidently.</small>
       </h1>
     </section>
 
