--- a/app/views/rnapages/home.html.erb
+++ b/app/views/rnapages/home.html.erb
@@ -1,1 +1,49 @@
-rna
+      <!-- Small boxes (Stat box) -->
+      <div class="row">
+
+        <div class="col-lg-3 col-xs-6">
+          <!-- small box -->
+          <div class="small-box bg-blue">
+            <div class="inner">
+              <p>What we plan to accomplish</p>
+            </div>
+            <a href="/Members/pages/objective" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          </div>
+        </div>
+        <!-- ./col -->
+        <div class="col-lg-3 col-xs-6">
+          <!-- small box -->
+          <div class="small-box bg-green">
+            <div class="inner">
+              <p>Starting example</p>
+            </div>
+            <a href="/Members/pages/examples" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          </div>
+        </div>
+        <!-- ./col -->
+
+
+        <div class="col-lg-3 col-xs-6">
+          <!-- small box -->
+          <div class="small-box bg-yellow">
+            <div class="inner">
+              <p>Data files</p>
+            </div>
+            <a href="/Members/pages/data" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          </div>
+        </div>
+        <!-- ./col -->
+        <div class="col-lg-3 col-xs-6">
+          <!-- small box -->
+          <div class="small-box bg-red">
+            <div class="inner">
+              <p>Server login instructions</p>
+            </div>
+            <a href="/Members/pages/instructions" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+          </div>
+        </div>
+        <!-- ./col -->
+
+
+      </div>
+      <!-- /.row -->
