--- a/app/views/layouts/atgc.html.erb
+++ b/app/views/layouts/atgc.html.erb
@@ -20,7 +20,7 @@
 <div class="wrapper">
 
       <header class="main-header">
-    <a href="/pages/home/" class="logo">
+    <a href="/Members/pages/home/" class="logo">
       <span class="logo-mini"><b>A</b>LT</span>
       <span class="logo-lg">Microbial genomics</span>
     </a>
@@ -71,8 +71,8 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/metagenomics/index.html"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/metagenomics/index.html"><i class="fa fa-circle-o"></i> Programs</a></li>
+            <li><a href="/Members/Materials/metagenomics/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial</a></li>
+            <li><a href="/Members/Materials/metagenomics/index.html" target="_blank"><i class="fa fa-circle-o"></i> Programs</a></li>
           </ul>
         </li>
 
@@ -83,7 +83,7 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pandora/index.html"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
+            <li><a href="/Members/Materials/pandora/index.html" target="_blank"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
           </ul>
         </li>
 
