--- a/app/views/layouts/c4m.html.erb
+++ b/app/views/layouts/c4m.html.erb
@@ -20,7 +20,7 @@
 <div class="wrapper">
 
       <header class="main-header">
-    <a href="/pages/home/" class="logo">
+    <a href="/Members/pages/home/" class="logo">
       <span class="logo-mini"><b>A</b>LT</span>
       <span class="logo-lg">Coding4Medicine</span>
     </a>
@@ -64,7 +64,7 @@
       <ul class="sidebar-menu">
         <li class="header">MAIN NAVIGATION</li>
         <li>
-          <a href="/Members/Materials/daily/201603/day9.html">
+          <a href="/Members/Materials/daily/201603/day9.html" target="_blank">
             <i class="fa fa-calendar"></i> <span>Daily updates</span>
             <small class="label pull-right bg-red">2016/3/9</small>
           </a>
@@ -77,10 +77,10 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/pages/objective/"><i class="fa fa-circle-o"></i> What we plan to accomplish</a></li>
-            <li><a href="/pages/examples/"><i class="fa fa-circle-o"></i> Starting example</a></li>
-            <li><a href="/pages/instructions/"><i class="fa fa-circle-o"></i> Login instructions</a></li>
-            <li><a href="/pages/data/"><i class="fa fa-circle-o"></i> Data sets</a></li>
+            <li><a href="/Members/pages/objective/" target="_blank"><i class="fa fa-circle-o"></i> What we plan to accomplish</a></li>
+            <li><a href="/Members/pages/examples/" target="_blank"><i class="fa fa-circle-o"></i> Starting example</a></li>
+            <li><a href="/Members/pages/instructions/" target="_blank"><i class="fa fa-circle-o"></i> Login instructions</a></li>
+            <li><a href="/Members/pages/data/" target="_blank"><i class="fa fa-circle-o"></i> Data sets</a></li>
           </ul>
         </li>
 
@@ -91,8 +91,8 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/linux/index.html"><i class="fa fa-circle-o"></i> Unix/linux tutorial</a></li>
-            <li><a href="/Members/Materials/scripting/index.html"><i class="fa fa-circle-o"></i> Python tutorial</a></li>
+            <li><a href="/Members/Materials/linux/index.html" target="_blank"><i class="fa fa-circle-o"></i> Unix/linux tutorial</a></li>
+            <li><a href="/Members/Materials/scripting/index.html" target="_blank"><i class="fa fa-circle-o"></i> Python tutorial</a></li>
           </ul>
         </li>
 
@@ -104,8 +104,8 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pacbio/index.html"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/pacbio/index.html"><i class="fa fa-circle-o"></i> Programs</a></li>
+            <li><a href="/Members/Materials/pacbio/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial</a></li>
+            <li><a href="/Members/Materials/pacbio/index.html" target="_blank"><i class="fa fa-circle-o"></i> Programs</a></li>
           </ul>
         </li>
 
@@ -117,7 +117,7 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/assembly/index.html"><i class="fa fa-circle-o"></i> Short read assembly</a></li>
+            <li><a href="/Members/Materials/assembly/index.html" target="_blank"><i class="fa fa-circle-o"></i> Short read assembly</a></li>
           </ul>
         </li>
 
@@ -129,8 +129,8 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/rnaseq/index.html"><i class="fa fa-circle-o"></i> Tutorial</a></li>
-            <li><a href="/Members/Materials/rnaseq/index.html"><i class="fa fa-circle-o"></i> Programs</a></li>
+            <li><a href="/Members/Materials/rnaseq/index.html" target="_blank"><i class="fa fa-circle-o"></i> Tutorial</a></li>
+            <li><a href="/Members/Materials/rnaseq/index.html" target="_blank"><i class="fa fa-circle-o"></i> Programs</a></li>
           </ul>
         </li>
 
@@ -141,7 +141,7 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/Materials/pandora/index.html"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
+            <li><a href="/Members/Materials/pandora/index.html" target="_blank"><i class="fa fa-circle-o"></i> Pandora's Toolbox</a></li>
           </ul>
         </li>
 
