cleaned up four pages

--- a/app/views/atgcpages/home.html.erb
+++ b/app/views/atgcpages/home.html.erb
@@ -7,7 +7,7 @@
             <div class="inner">
               <p>What we plan to accomplish</p>
             </div>
-            <a href="/Members/pages/objective" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/pages/objective.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -17,7 +17,7 @@
             <div class="inner">
               <p>Starting example</p>
             </div>
-            <a href="/Members/pages/examples" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/pages/examples.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -29,7 +29,7 @@
             <div class="inner">
               <p>Data files</p>
             </div>
-            <a href="/Members/pages/data" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/pages/data.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
@@ -39,7 +39,7 @@
             <div class="inner">
               <p>Server login instructions</p>
             </div>
-            <a href="/Members/pages/instructions" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/pages/instructions.html" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
         <!-- ./col -->
