--- a/app/views/sshkeys/_form.html.erb
+++ b/app/views/sshkeys/_form.html.erb
@@ -12,8 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :key %>
-    <%= f.text_field :key %>
+    <%= f.text_area :key, size: "100x4" %>
   </div>
 
   <div class="actions">
