--- a/app/views/layouts/c4m.html.erb
+++ b/app/views/layouts/c4m.html.erb
@@ -1,59 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Coding for Medicine</title>
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="stylesheet" href="//coding4medicine.com/static/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="//coding4medicine.com/static/css/AdminLTE.min.css">
-  <link rel="stylesheet" href="//coding4medicine.com/static/css/skin-red.min.css">
-<%= csrf_meta_tags %>
-</head>
-
-
-
-<body class="hold-transition skin-red sidebar-mini">
+<%= render "layouts/header", :locals => {:title => 'Coding for Medicine'} %>
 <div class="wrapper">
-
-      <header class="main-header">
-    <a href="/Members/pages/home/" class="logo">
-      <span class="logo-mini"><b>A</b>LT</span>
-      <span class="logo-lg">Coding4Medicine</span>
-    </a>
-    <nav class="navbar navbar-static-top">
-      <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-        <span class="sr-only">Toggle navigation</span>
-      </a>
-
-<div class="navbar-custom-menu">
-        <ul class="nav navbar-nav">
-          <!-- User Account: style can be found in dropdown.less -->
-          <li class="dropdown user user-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <span class="hidden-xs">Logout</span>
-            </a>
-            <ul class="dropdown-menu">
-              <!-- Menu Footer-->
-              <li class="user-footer">
-                <div class="pull-left">
-		<%= link_to 'Change password', edit_user_registration_path, :class=>"btn btn-default btn-flat" %>
-                </div>
-                <div class="pull-right">
-		<%= link_to 'sign out', destroy_user_session_path, :class=>"btn btn-default btn-flat" %>
-                </div>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-
-    </nav>
-  </header>
-
+<%= render "layouts/head", :locals => {:title => 'Coding 4 Medicine'} %>
 
       <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
@@ -77,10 +24,10 @@
             <i class="fa fa-angle-left pull-right"></i>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/Members/pages/objective/" target="_blank"><i class="fa fa-circle-o"></i> What we plan to accomplish</a></li>
-            <li><a href="/Members/pages/examples/" target="_blank"><i class="fa fa-circle-o"></i> Starting example</a></li>
-            <li><a href="/Members/pages/instructions/" target="_blank"><i class="fa fa-circle-o"></i> Login instructions</a></li>
-            <li><a href="/Members/pages/data/" target="_blank"><i class="fa fa-circle-o"></i> Data sets</a></li>
+            <li><a href="/pages/objective.html" ><i class="fa fa-circle-o"></i> What we plan to accomplish</a></li>
+            <li><a href="/pages/examples.html" ><i class="fa fa-circle-o"></i> Starting example</a></li>
+            <li><a href="/pages/instructions.html" ><i class="fa fa-circle-o"></i> Login instructions</a></li>
+            <li><a href="/pages/data.html" ><i class="fa fa-circle-o"></i> Data sets</a></li>
           </ul>
         </li>
 
@@ -179,11 +126,5 @@
   <!-- /.content-wrapper -->
 
 </div>
-<script src="//coding4medicine.com/static/js/jquery-2.2.3.min.js"></script>
-<script src="//coding4medicine.com/static/js/bootstrap.min.js"></script>
-<script src="//coding4medicine.com/static/js/app.min.js"></script>
-<script src="//coding4medicine.com/static/main.js"></script>
 
-
-</body>
-</html>
+<%= render "layouts/footer" %>
