devise cleaned up

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -16,5 +16,5 @@
           <button type="submit" class="btn btn-primary btn-block btn-flat">Send me reset password instructions</button>
        </div>
 <% end %>
+<%= render "devise/shared/links" %>
  </div>
-
