--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -21,11 +21,5 @@
           <button type="submit" class="btn btn-primary btn-block btn-flat">Change my password</button>
        </div>
 <% end %>
+<%= render "devise/shared/links" %>
 </div>
-
-
-
-
-
-
-
