--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -7,22 +7,22 @@
     <p class="login-box-msg">Edit <%= resource_name.to_s.humanize %></p>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <div class="form-group has-feedback">
-        <input autofocus="autofocus" type="email" class="form-control" placeholder="Email" value="" name="user[email]" id="user_email">
+        <input autofocus="autofocus" type="email" class="form-control" placeholder="Email" value="<%= @user.email %>" name="user[email]" id="user_email">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
       <div class="form-group has-feedback">
-        <input autocomplete="off" type="password" name="user[password]" id="user_password" class="form-control" placeholder="Password">
+        <input autocomplete="off" type="password" name="user[password]" id="user_password" class="form-control" placeholder="New password">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password_confirmation" class="form-control" placeholder="Retype password">
+        <input autocomplete="off" type="password" name="user[password_confirmation]" id="user_password_confirmation"class="form-control" placeholder="Retype new password">
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="current_password" class="form-control" placeholder="Existing password">
+        <input autocomplete="off" type="password" name="user[current_password]" id="user_current_password" class="form-control" placeholder="Existing password">
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
        <div class="form-group has-feedback">
