--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,26 +19,24 @@
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="Retype password">
+        <input autocomplete="off" type="password" name="user[password_confirmation]" id="user_password_confirmation" class="form-control" placeholder="Retype password">
         <span class="glyphicon glyphicon-log-in form-control-feedback"></span>
       </div>
       <div class="row">
         <div class="col-xs-8">
-          <div class="checkbox icheck">
             <label>
-              <input type="checkbox"> I agree to the <a href="#">terms</a>
+              By clicking "Register", I agree to <a href="#">Terms.</a>
             </label>
-          </div>
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Register</button>
+          <button type="submit" name="commit" value="Sign up" data-disable-with="Sign up" class="btn btn-primary btn-block btn-flat">Register</button>
         </div>
         <!-- /.col -->
       </div>
 <% end %>
 
-<%= link_to "I already have a membership", new_session_path(resource_name), :class => "text-center" %>
+<%= render "devise/shared/links" %>
   </div>
   <!-- /.form-box -->
 </div>
