--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -13,19 +13,22 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <span class="hidden-xs">Logout</span>
+              <span class="hidden-xs">Account</span>
             </a>
             <ul class="dropdown-menu">
-		<li>
-                <%= link_to 'Upload key', new_sshkey_path, :class=>"btn btn-default btn-flat" %>
-                </li>
               <!-- Menu Footer-->
               <li class="user-footer">
+                <div class="pull-left">
+		<%= link_to 'View server info', new_sshkey_path, :class=>"btn btn-default btn-flat" %>
+                </div>
+                <div class="pull-right">
+                <%= link_to 'Upload key', new_sshkey_path, :class=>"btn btn-default btn-flat" %>
+                </div>
                 <div class="pull-left">
 		<%= link_to 'Change password', edit_user_registration_path, :class=>"btn btn-default btn-flat" %>
                 </div>
                 <div class="pull-right">
-		<%= link_to 'sign out', destroy_user_session_path, :class=>"btn btn-default btn-flat" %>
+		<%= link_to 'sign out', destroy_user_session_path, method: :delete, :class=>"btn btn-default btn-flat" %>
                 </div>
               </li>
             </ul>
